[gd_scene load_steps=8 format=2]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://WallTile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Brick.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://ParticleManager.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 399.946, 53.1306 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="LivesLabel" type="RichTextLabel" parent="."]
margin_left = 27.0
margin_top = 33.0
margin_right = 607.0
margin_bottom = 233.0
theme = ExtResource( 2 )
text = "Lives"
scroll_active = false

[node name="Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 332.224, 1199.46 )
scale = Vector2( 0.2, 0.2 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
cell_size = Vector2( 32, 32 )
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 65536, 1, 0, 65555, 1, 0, 131072, 1, 0, 131091, 1, 0, 196608, 1, 0, 196627, 1, 0, 262144, 1, 0, 262163, 1, 0, 327680, 1, 0, 327699, 1, 0, 393216, 1, 0, 393235, 1, 0, 458752, 1, 0, 458771, 1, 0, 524288, 1, 0, 524307, 1, 0, 589824, 1, 0, 589843, 1, 0, 655360, 1, 0, 655379, 1, 0, 720896, 1, 0, 720915, 1, 0, 786432, 1, 0, 786451, 1, 0, 851968, 1, 0, 851987, 1, 0, 917504, 1, 0, 917523, 1, 0, 983040, 1, 0, 983059, 1, 0, 1048576, 1, 0, 1048595, 1, 0, 1114112, 1, 0, 1114131, 1, 0, 1179648, 1, 0, 1179667, 1, 0, 1245184, 1, 0, 1245203, 1, 0, 1310720, 1, 0, 1310739, 1, 0, 1376256, 1, 0, 1376275, 1, 0, 1441792, 1, 0, 1441811, 1, 0, 1507328, 1, 0, 1507347, 1, 0, 1572864, 1, 0, 1572883, 1, 0, 1638400, 1, 0, 1638419, 1, 0, 1703936, 1, 0, 1703955, 1, 0, 1769472, 1, 0, 1769491, 1, 0, 1835008, 1, 0, 1835027, 1, 0, 1900544, 1, 0, 1900563, 1, 0, 1966080, 1, 0, 1966099, 1, 0, 2031616, 1, 0, 2031635, 1, 0, 2097152, 1, 0, 2097171, 1, 0, 2162688, 1, 0, 2162707, 1, 0, 2228224, 1, 0, 2228243, 1, 0, 2293760, 1, 0, 2293779, 1, 0, 2359296, 1, 0, 2359315, 1, 0, 2424832, 1, 0, 2424851, 1, 0, 2490368, 1, 0, 2490387, 1, 0, 2555904, 1, 0, 2555923, 1, 0 )

[node name="Brick" parent="." instance=ExtResource( 4 )]
position = Vector2( 192, 300 )

[node name="Brick2" parent="." instance=ExtResource( 4 )]
position = Vector2( 132, 300 )

[node name="Brick3" parent="." instance=ExtResource( 4 )]
position = Vector2( 312, 300 )

[node name="Brick5" parent="." instance=ExtResource( 4 )]
position = Vector2( 372, 300 )

[node name="Brick4" parent="." instance=ExtResource( 4 )]
position = Vector2( 252, 300 )

[node name="Brick6" parent="." instance=ExtResource( 4 )]
position = Vector2( 336, 372 )

[node name="Brick7" parent="." instance=ExtResource( 4 )]
position = Vector2( 276, 372 )

[node name="Brick8" parent="." instance=ExtResource( 4 )]
position = Vector2( 456, 372 )

[node name="Brick9" parent="." instance=ExtResource( 4 )]
position = Vector2( 516, 372 )

[node name="Brick10" parent="." instance=ExtResource( 4 )]
position = Vector2( 396, 372 )

[node name="Brick31" parent="." instance=ExtResource( 4 )]
position = Vector2( 132, 636 )

[node name="Brick32" parent="." instance=ExtResource( 4 )]
position = Vector2( 192, 636 )

[node name="Brick33" parent="." instance=ExtResource( 4 )]
position = Vector2( 72, 636 )

[node name="Brick34" parent="." instance=ExtResource( 4 )]
position = Vector2( 156, 708 )

[node name="Brick35" parent="." instance=ExtResource( 4 )]
position = Vector2( 96, 708 )

[node name="Brick36" parent="." instance=ExtResource( 4 )]
position = Vector2( 216, 708 )

[node name="Brick11" parent="." instance=ExtResource( 4 )]
position = Vector2( 192, 444 )

[node name="Brick12" parent="." instance=ExtResource( 4 )]
position = Vector2( 132, 444 )

[node name="Brick13" parent="." instance=ExtResource( 4 )]
position = Vector2( 312, 444 )

[node name="Brick14" parent="." instance=ExtResource( 4 )]
position = Vector2( 372, 444 )

[node name="Brick15" parent="." instance=ExtResource( 4 )]
position = Vector2( 252, 444 )

[node name="Brick16" parent="." instance=ExtResource( 4 )]
position = Vector2( 348, 516 )

[node name="Brick17" parent="." instance=ExtResource( 4 )]
position = Vector2( 178.624, 516 )

[node name="Brick18" parent="." instance=ExtResource( 4 )]
position = Vector2( 468, 516 )

[node name="Brick19" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, 516 )

[node name="Brick20" parent="." instance=ExtResource( 4 )]
position = Vector2( 408, 516 )

[node name="Brick21" parent="." instance=ExtResource( 4 )]
position = Vector2( 192, 576 )

[node name="Brick22" parent="." instance=ExtResource( 4 )]
position = Vector2( 132, 576 )

[node name="Brick23" parent="." instance=ExtResource( 4 )]
position = Vector2( 449.844, 568.509 )

[node name="Brick24" parent="." instance=ExtResource( 4 )]
position = Vector2( 509.844, 568.509 )

[node name="Brick25" parent="." instance=ExtResource( 4 )]
position = Vector2( 112.747, 516.068 )

[node name="Brick26" parent="." instance=ExtResource( 4 )]
position = Vector2( 348, 708 )

[node name="Brick27" parent="." instance=ExtResource( 4 )]
position = Vector2( 411.991, 708 )

[node name="Brick28" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, 708 )

[node name="Brick29" parent="." instance=ExtResource( 4 )]
position = Vector2( 540, 636 )

[node name="Brick30" parent="." instance=ExtResource( 4 )]
position = Vector2( 452.963, 636 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 640 )
current = true

[node name="ParticleManager" parent="." instance=ExtResource( 6 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 335.201, 1338.13 )
shape = SubResource( 1 )

[node name="ResetTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
